--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 end_of_line = LF
 
-[{.travis.yml,.pkgmeta}]
+[{*.yml,.pkgmeta}]
 indent_style = space
 indent_size = 2
 
